Document our dependency on Java 7