@@ -9,6 +9,7 @@ Home of CalCentral. [![Dependency Status](https://gemnasium.com/ets-berkeley-edu
 * [Bundler](http://gembundler.com/rails3.html)
 * [Git](https://help.github.com/articles/set-up-git)
 * [JDBC Oracle driver](http://www.oracle.com/technetwork/database/enterprise-edition/jdbc-112010-090769.html)
+* [Java 7 SDK](http://www.oracle.com/technetwork/java/javase/downloads/index.html)
 * [JRuby 1.7.x](http://jruby.org/)
 * [PostgreSQL](http://www.postgresql.org/)
 * [Rails 3.2.x](http://rubyonrails.org/download)
@@ -70,21 +71,10 @@ cd calcentral
 # Answer "yes" again if it asks you to trust a new .rvmrc file.
 ```
 
-1. (For 64-bit JVMs) Make JRuby faster, give it lots of RAM, & enable C extensions by running this or put in your .bashrc:
+1. Make JRuby faster, give it lots of RAM, & enable C extensions by running this or put in your .bashrc:
 ``` bash
 export JRUBY_OPTS="-Xcext.enabled=true -X-C -J-Xms900m -J-Xmx900m -J-XX:MaxPermSize=500m --headless -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-Xcompile.invokedynamic=false"
 ```
-
-1. (For 32-bit JVMs) Make JRuby faster, give it lots of RAM, & enable C extensions by running this or put in your .bashrc:
-```bash
-export JRUBY_OPTS="-Xcext.enabled=true -J-d32 -J-client -X-C -J-Xms900m -J-Xmx900m -J-XX:MaxPermSize=500m --headless"
-```
-
-  * __WARNING__: The -J-d32 setting is optional (32-bit mode starts up a tiny bit quicker in some JVMs).
-  * __WARNING__: Do not switch between 32-bit and 64-bit JRuby after your gemset has been initialized (your bundle library will have serious issues). If you do need to change settings, make sure to reinitialize your gemset:
-     * ```rvm gemset delete calcentral```
-     * (set your JRUBY_OPTS)
-     * ```bundle install```
 
 1. Download and install xvfb. On a Mac, you get xvfb by [installing XQuartz](XQuartz: http://xquartz.macosforge.org/landing/)
 
